sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '<-' expected but '=' found.
for(i=0 to 8)
     ^AlgBubbleSort1:9: error: illegal start of simple expression
}
^AlgBubbleSort1:15: error: Unmatched closing brace '}' ignored here
}
^