sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{for(i=0 to 8)
     getvaleur( i)
     get(valeur( i+1)
if(getvaleur( i) > getvaleur( i+1)) 
    { echange(  i, i+1) }
}

}
